[tool.poetry]
name = "odd-dbt"
version = "0.1.2"
description = "OpenDataDiscovery Action for dbt"
authors = ["Mateusz Kulas <mkulas@provectus.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ['Open Data Discovery', 'dbt', "Metadata", "Data Discovery", "Data Observability"]
packages = [{include = "odd_dbt"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.4.1"
dbt-snowflake = "^1.4.0"
dbt-redshift = "^1.4.0"
dbt-postgres = "^1.4.1"
odd-models = "^2.0.11"
oddrn-generator = "0.1.62"
funcy = "^1.17"
sqlalchemy = "^1.4.46"
psycopg2 = "^2.9.5"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
