[tool.poetry]
name = "odd-dbt"
version = "0.2.10"
description = "OpenDataDiscovery Action for dbt"
authors = ["Mateusz Kulas <mkulas@provectus.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = [
    'Open Data Discovery',
    'dbt',
    "Metadata",
    "Data Discovery",
    "Data Observability",
]
packages = [{ include = "odd_dbt" }]

[tool.poetry.dependencies]
python = "^3.9"
odd-models = "^2.0.31"
oddrn-generator = "^0.1.95"
funcy = "^2.0"
sqlalchemy = "^1.4.46"
loguru = "^0.6.0"
typer = { extras = ["all"], version = "^0.7.0" }
psycopg2-binary = "^2.9.6"
dbt-postgres = "^1.6.2"
dbt-snowflake = "^1.6.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^3.1.0"
ruff = "^0.0.278"

[tool.ruff]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"logger.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
odd_dbt_test = "odd_dbt.app:app"
